--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-
 body{
-    background-image: url('water.jpg'); 
+    background-image: url('buter.jpg');
     background-repeat: no-repeat;
     background-size: cover fullpage ;
     background-position: center;
